# vulRAG

./: .gitignore  README.md  UsersBIThoAppDataLocalTempmmrag_testbm25.chunks.pkl  UsersBIThoAppDataLocalTempmmrag_testbm25.pkl  check_data.py  pyproject.toml  save_model.py
.claude/: settings.local.json
doc/: architecture.md  explanation.md  structure.md
mmrag/: __init__.py
mmrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mmrag/benchmark/: __init__.py  __main__.py  dataset.py  evaluator.py  metrics.py  models.py
mmrag/finetune/: __init__.py  __main__.py  models.py  trainer.py  triplet_gen.py
mmrag/parsing/: __init__.py  __main__.py  ast_parser.py  cfg_builder.py  chunker.py  macro_expander.py  models.py  slicer.py
mmrag/reasoning/: __init__.py  __main__.py  agents.py  evidence.py  grammars.py  llm_backend.py  models.py  orchestrator.py  prompts.py
mmrag/retrieval/: __init__.py  __main__.py  bm25_index.py  embedding_index.py  fusion.py  graph_index.py  models.py  retriever.py  tokenizer.py
results/: all_tables.json  table61.json  table62.json  table63.json  table64.json  table65.json  tables.tex
scripts/: benchmark_tables.py  run_benchmark.py
tests/: conftest.py  test_agents.py  test_benchmark.py  test_bm25_index.py  test_cfg.py  test_chunker.py  test_embedding_index.py  test_evidence.py  test_finetune.py  test_fusion.py  test_orchestrator.py  test_parser.py  test_prompts.py  test_reasoning_models.py  test_retriever.py  test_robustness.py  test_slicer.py  test_tokenizer.py
tests/fixtures/: benchmark_sample.jsonl  sample.c  (+1 more)
