[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmrag"
version = "0.1.0"
description = "Multi-Modal Enhanced RAG for C/C++ vulnerability detection"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.22,<0.26",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.22",
    "pydantic>=2.0,<3.0",
    "rank-bm25>=0.2.2,<0.3",
    "numpy>=1.22",
    "sentence-transformers>=2.2.0,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
gpu = ["llama-cpp-python>=0.2.0"]
finetune = ["torch>=2.0"]

[tool.setuptools.packages.find]
include = ["mmrag*"]
